cabal-version: 2.4

name:           ada
version:        1.0.0
build-type:     Simple
license:        BSD-3-Clause
license-file:   LICENSE
copyright:      2023 Mercury Technologies
bug-reports:    https://github.com/MercuryTechnologies/ada/issues
synopsis:       A helpful AI assistant for Mercury engineers

source-repository head
    type: git
    location: https://github.com/MercuryTechnologies/ada.git

executable ada
  main-is: Main.hs
  other-modules: OpenAI
  build-depends:
      base >=4.7 && <5
    , aeson
    , http-client
    , http-client-tls
    , servant
    , servant-client
    , optparse-applicative
    , string-interpolate
    , text
    , vector
  default-language: Haskell2010
