cabal-version: 2.4

name:           ada
version:        1.0.0
build-type:     Simple
license:        BSD-3-Clause
license-file:   LICENSE
copyright:      2023 Mercury Technologies
bug-reports:    https://github.com/MercuryTechnologies/ada/issues
synopsis:       A helpful AI assistant for Mercury engineers

source-repository head
    type: git
    location: https://github.com/MercuryTechnologies/ada.git

executable ada
  main-is: Main.hs
  other-modules: Slack, OpenAI
  build-depends:
      base >=4.7 && <5
    , aeson
    , base16
    , bytestring
    , cryptohash-sha256
    , directory
    , http-client
    , http-client-tls
    , http-types
    , kdt
    , logging
    , optparse-applicative
    , repline
    , safe-exceptions
    , serialise
    , servant
    , servant-client
    , servant-server
    , string-interpolate
    , text
    , time
    , transformers
    , vector
    , vector-split
    , wai
    , wai-extra
    , warp
    , wss-client
  default-language: Haskell2010
  ghc-options: -Wall
